--- a/package.json
+++ b/package.json
@@ -11,12 +11,18 @@
     "@types/react": "^16.14.2",
     "@types/react-dom": "^16.9.10",
     "antd": "^4.9.4",
+    "axios": "^0.21.1",
+    "@reduxjs/toolkit": "^1.5.0",
     "@ant-design/icons": "^4.3.0",
+    "i18next": "^19.8.4",
+    "react-i18next": "^11.8.5",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-redux": "^7.2.2",
     "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "typescript": "^4.1.3",
     "web-vitals": "^0.2.4"
   },
@@ -45,6 +51,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-redux": "^7.1.15",
     "@types/react-router-dom": "^5.1.7",
     "typescript-plugin-css-modules": "^3.0.1"
   }
