--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@reduxjs/toolkit": "^1.5.0",
     "@ant-design/icons": "^4.3.0",
     "i18next": "^19.8.4",
+    "jwt-decode": "^3.1.2",
     "react-i18next": "^11.8.5",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
