--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^4.3.0",
+    "@commitlint/cli": "^12.1.4",
+    "@commitlint/config-conventional": "^12.1.4",
+    "@reduxjs/toolkit": "^1.5.0",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
@@ -12,17 +16,17 @@
     "@types/react-dom": "^16.9.10",
     "antd": "^4.9.4",
     "axios": "^0.21.1",
-    "@reduxjs/toolkit": "^1.5.0",
-    "@ant-design/icons": "^4.3.0",
+    "cz-customizable": "6.3.0",
+    "husky": "7.0.1",
     "i18next": "^19.8.4",
     "jwt-decode": "^3.1.2",
-    "react-i18next": "^11.8.5",
     "react": "^17.0.1",
     "react-credit-cards": "^0.8.3",
     "react-dom": "^17.0.1",
+    "react-i18next": "^11.8.5",
+    "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
-    "react-redux": "^7.2.2",
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
@@ -33,7 +37,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "prepare": "husky install"
   },
   "eslintConfig": {
     "extends": [
@@ -52,6 +57,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "config": {
+    "commitizen": {
+      "path": "node_modules/cz-customizable"
+    }
   },
   "devDependencies": {
     "@types/react-redux": "^7.1.15",
