--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,10 @@
+
 {
   "semi": false,
+  "tabWidth": 2,
+  "endOfLine": "lf",
+  "printWidth": 100,
   "singleQuote": true,
-  "trailingComma": "none"
+  "trailingComma": "all",
+  "jsxBracketSameLine": true
 }
